--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -22,7 +22,7 @@ Due to its heuristic nature, BLAST is much faster than dynamic programming algor
 Although BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies rises new challenges for BLAST. 
 Statistics imply that the number of genomic sequences is doubling almost every year, and therefore hardware acceleration is essential to meet the new requirements \cite{wien2011blastp}. 
 
-We propose an FPGA-based implementation of BLAST algorithm called HBlast, where the DNA search alignment is improved by parallel processing. 
+We propose an FPGA-based implementation of BLAST algorithm called HBLast, where the DNA search alignment is improved by parallel processing. 
 This work is part of a larger project, which aims to develop a library of hardware accelerators targeting cloud-based FPGA instances.
 The accelerators will be provided in the public domain, which enables hospitals and research centers with limited computing facilities to achieve hardware acceleration by hosting these accelerators on the cloud infrastructure such as Amazon AWS FPGA instances~\cite{aws2018}.
 Since the cloud billing model is based on usage and instance types, organizations can obtain their solution faster within the budget constraints.
