--- a/Paper/Sections/3BlastAlgorithm.tex
+++ b/Paper/Sections/3BlastAlgorithm.tex
@@ -13,7 +13,7 @@
 	\end{subfigure}
 	\caption{(a)~Finding W-mers from a query by creating substrings of size 3, (b)~Example of exact match between a query and a database sequence}
 	\label{fig:step12}
-    \vspace{-3 mm}
+    %\vspace{-3 mm}
 \end{figure}
 
 BLAST algorithm is used to search for similar parts of biological sequences in a database and a query~\cite{Stephen1990}. 
@@ -59,7 +59,7 @@ The expansion continues until the scoring no longer gets improved.
     \includegraphics[width=\columnwidth]{Figures/Algorithm3.pdf}
     \caption{Example of BLAST Algorithm's Third Step: Expansion of Comparison around Hits} 
     \label{fig:step3}
-    \vspace{-3 mm}
+    %\vspace{-3 mm}
 \end{figure}
 The scoring technique of the algorithm is based on the Point Accepted Mutations~(PAM) matrices, that are used to examine which amino-acid substitutions are biologically accepted~\cite{sotiriades2007design}. 
 However, due to the complexity of this technique, a simpler and biologically acceptable scoring method is generally used. 
