--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -8,6 +8,9 @@
 \usepackage{todonotes}
 \usepackage{subfigure}
 \usepackage{PGFPlots}
+\usepackage{multirow}
+\usepackage{longtable}
+\usepackage{booktabs, colortbl, tabularx}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
